# synospec

./: .bumpversion.cfg  .gitignore  CHANGES.md  LICENSE.md  MANIFEST.in  README.md  environment.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: Makefile  conf.py  fobos_etc.rst  index.rst  installation.rst  knownissues.rst  scripts.rst  util.rst  wfos_etc.rst  whatsnew.rst
docs/_templates/: layout.html
docs/api/: modules.rst  synospec.etc.aperture.rst  synospec.etc.detector.rst  synospec.etc.efficiency.rst  synospec.etc.extract.rst  synospec.etc.kernel.rst  synospec.etc.observe.rst  synospec.etc.optical.rst  synospec.etc.resolution.rst  synospec.etc.rst  synospec.etc.sampling.rst  synospec.etc.source.rst  synospec.etc.spectrographs.rst  synospec.etc.spectrum.rst  synospec.etc.telescopes.rst  synospec.etc.util.rst  synospec.etc.vph.rst  synospec.rst  synospec.util.bitmask.rst  synospec.util.frame.rst  synospec.util.lineprofiles.rst  synospec.util.rst  synospec.util.util.rst  synospec.version.rst
docs/help/: fobos_etc.rst  fobos_etc_grid.rst  imaging_etc.rst  wfos_etc.rst
docs/include/: copy.rst  links.rst
docs/scripts/: write_script_help.py
synospec/: __init__.py  version.py
synospec/data/: README.md
synospec/data/broadband_filters/: extract.py  gunn_2001_i_response.db  gunn_2001_r_response.db  gunn_2001_u_response.db
synospec/data/broadband_filters/asahi/: plot.py  super_g_asbuilt_convert.txt  super_i_asbuilt_convert.txt  super_r_asbuilt_convert.txt  super_u_asbuilt.txt  super_u_asbuilt_convert.txt  super_z_asbuilt.txt  super_z_asbuilt_convert.txt
synospec/data/efficiency/: aluminum.db  aluminum_v1.db  avg_keck_reflectivity.db  desi_spectrograph_thru.txt  fiber_wfos_throughput.db  fobos_throughput.db  tmt_ord.db  uv_enhanced_silver.db  wfos_blue_efficiency.db  wfos_red_efficiency.db  wfos_throughput.db  zecoat.db
synospec/data/galaxy/: blue_galaxy_8329-6104.fits  red_galaxy_8131-6102.fits
synospec/data/seeing/: keck_seeing.db
synospec/data/sky/: lris_esi_skyspec_fnu.fits  mauna_kea_extinction.db  mt_hamilton_extinction.db
synospec/etc/: aperture.py  detector.py  efficiency.py  extract.py  junk  kernel.py  observe.py  optical.py  resolution.py  sampling.py  source.py  spectrographs.py  spectrum.py  telescopes.py  util.py  vph.py
synospec/scripts/: __init__.py  fobos_etc.py  fobos_etc_grid.py  imaging_etc.py  scriptbase.py  wfos_etc.py
synospec/tests/: test_aperture.py  test_source.py  test_spectrum.py
synospec/util/: bitmask.py  frame.py  lineprofiles.py  util.py
(+27 files in other folders)
